# prompt-runner

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt
config/: config.yaml  image_models.yaml  image_prompts.yaml  llm_models.yaml  llm_prompts.yaml
docs/: cuda-setup.md  dev-notes.md  dev_notes.md  development.md  setup.md
src/: __init__.py  config.py  llm_runner.py  utils.py
src/prompt_runner/: config.py  image_runner.py  llm_runner.py  utils.py
src/prompt_runner.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_config.py  test_image_runner.py  test_llm_runner.py  test_utils.py
